fixed the gap b/w info container childs

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -17,7 +17,7 @@
     width: 90%;
     margin-top: 1rem;
     padding: 2rem;
-    gap: 4rem;
+    gap: 1rem;
     transition: 0.3s linear;
 
 
